--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@
   #CUSTOM PROPERTY
 \*-----------------------------------*/
 
+.undetermined {
+  filter: blur(5px);
+  opacity: 0.7;
+}
+
+
 :root {
 
   /**
@@ -453,7 +459,7 @@ body {
 
 .features-item .item-text {
   max-width: 25ch;
-  color: var(--white_50);
+  color: #E8E8E8;
   font-size: var(--fs-9);
 }
 
@@ -1195,7 +1201,7 @@ body {
    */
 
   .hero {
-    background-image: url("../images/hero.jpg");
+    background-image: url("../images/hero6.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
