--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@
   max-width: 1200px;
   margin: auto;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
-  gap: 3rem;
+  grid-template-columns: repeat(3, 2fr);
+  justify-items: center;
+  gap: 20rem;
 }
 
 .footer-logo {
@@ -56,7 +57,7 @@
 
 .back-to-top {
   background: transparent;
-  margin-top: 4rem;
+  margin-top: 3rem;
   border: 1px solid #ffffff;
   color: #ffffff;
   padding: 0.6rem 1.2rem;
@@ -89,7 +90,7 @@
   background: #2b2b2b;
   color: #ffffff;
   text-align: center;
-  padding: 0.8rem;
+  padding: 0rem;
   font-size: 1.2rem;
 }
 
