--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -35,3 +35,89 @@
 .contact-form button {
   width: 100%;
 }
+
+/* Overlay background */
+.modal-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+/* Show state */
+.modal-overlay.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+/* Modal box */
+.modal-box {
+  background: #fff;
+  padding: 2.5rem;
+  width: 100%;
+  max-width: 480px;
+  border-radius: 16px;
+  position: relative;
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
+
+  transform: translateY(20px) scale(0.95);
+  transition: transform 0.3s ease;
+}
+
+.modal-box p {
+    margin-bottom: 1rem;
+}
+
+.modal-overlay.active .modal-box {
+  transform: translateY(0) scale(1);
+}
+
+/* Close button */
+.modal-close {
+  position: absolute;
+  top:-5px;
+  right: 16px;
+  background: none;
+  border: none;
+  font-size: 4rem;
+  cursor: pointer;
+  color: #555;
+}
+
+.modal-close:hover {
+  color: #000;
+}
+
+/* Form spacing */
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 0.9rem;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+.contact-form textarea::placeholder {
+  font-size: 1.5rem;
+}
+
+.contact-form textarea {
+  min-height: 120px;
+  resize: vertical;
+}
+
+body.modal-open {
+  overflow: hidden;
+}
+
+html {
+  scrollbar-gutter: stable;
+}
