--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,16 @@
 \*-----------------------------------*/
 
 
+.features-list > .donate-card {
+  grid-column: 1 / -1;
+}
+
+.features-progress {
+  list-style: none;
+  padding: 0;
+}
+
+
 #charities {
   scroll-margin-top: 400px; /* height of your fixed header */
 }
@@ -798,10 +808,6 @@ body {
 .card-wrapper-text .yellow { color: var(--bright-yellow-crayola); }
 
 .card-wrapper-text .cyan { color: var(--medium-turquoise); }
-
-
-
-
 
 /*-----------------------------------*\
   #TESTIMONIALS
