--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
 \*-----------------------------------*/
 
 
-.features-list > .donate-card {
+.features-list>.donate-card {
   grid-column: 1 / -1;
 }
 
@@ -26,7 +26,8 @@
 
 
 #charities {
-  scroll-margin-top: 400px; /* height of your fixed header */
+  scroll-margin-top: 400px;
+  /* height of your fixed header */
 }
 
 .undetermined {
@@ -47,7 +48,8 @@
 }
 
 .btn-undetermined {
-  background-color: var(--black); /* same as btn-secondary */
+  background-color: var(--black);
+  /* same as btn-secondary */
   color: var(--white);
   font-weight: var(--fw-600);
   padding: 12px 32px;
@@ -55,17 +57,22 @@
   align-items: center;
   gap: 10px;
   position: relative;
-  cursor: not-allowed; /* looks inactive */
-  transition: none; /* disable background/text transition */
+  cursor: not-allowed;
+  /* looks inactive */
+  transition: none;
+  /* disable background/text transition */
 }
 
 .btn-undetermined::after {
   content: "";
   position: absolute;
   inset: 0;
-  border: 1px solid var(--black); /* same as background */
-  transform: translate(5px, 5px); /* keep that offset like the original */
-  transition: none; /* disable hover/focus animation */
+  border: 1px solid var(--black);
+  /* same as background */
+  transform: translate(5px, 5px);
+  /* keep that offset like the original */
+  transition: none;
+  /* disable hover/focus animation */
 }
 
 /* Make sure hover/focus do nothing */
@@ -167,7 +174,9 @@
   box-sizing: border-box;
 }
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
 a {
   text-decoration: none;
@@ -181,11 +190,17 @@ time,
 input,
 strong,
 button,
-ion-icon { display: block; }
+ion-icon {
+  display: block;
+}
 
-img { height: auto; }
+img {
+  height: auto;
+}
 
-ion-icon { pointer-events: none; }
+ion-icon {
+  pointer-events: none;
+}
 
 input,
 button {
@@ -194,11 +209,17 @@ button {
   font: inherit;
 }
 
-input { width: 100%; }
+input {
+  width: 100%;
+}
 
-button { cursor: pointer; }
+button {
+  cursor: pointer;
+}
 
-:focus-visible { outline-offset: 4px; }
+:focus-visible {
+  outline-offset: 4px;
+}
 
 ::selection {
   background-color: rgba(146, 255, 45, 0.35);
@@ -219,11 +240,17 @@ body {
   overflow-x: hidden;
 }
 
-::-webkit-scrollbar { width: 13px; }
+::-webkit-scrollbar {
+  width: 13px;
+}
 
-::-webkit-scrollbar-track { background-color: hsl(0, 0%, 95%); }
+::-webkit-scrollbar-track {
+  background-color: hsl(0, 0%, 95%);
+}
 
-::-webkit-scrollbar-thumb { background-color: var(--pistachio); }
+::-webkit-scrollbar-thumb {
+  background-color: var(--pistachio);
+}
 
 
 
@@ -233,7 +260,9 @@ body {
   #REUSED STYLE
 \*-----------------------------------*/
 
-.container { padding-inline: 15px; }
+.container {
+  padding-inline: 15px;
+}
 
 .section-subtitle {
   color: var(--color, var(--pistachio));
@@ -246,10 +275,14 @@ body {
 }
 
 .h1,
-.h2 { font-weight: var(--fw-300); }
+.h2 {
+  font-weight: var(--fw-300);
+}
 
 .h2,
-.h3 { line-height: 1.6; }
+.h3 {
+  line-height: 1.6;
+}
 
 .h2 {
   font-size: var(--fs-3);
@@ -292,11 +325,17 @@ body {
   transition: var(--transition-2);
 }
 
-.btn:is(:hover, :focus)::after { transform: translate(0, 0); }
+.btn:is(:hover, :focus)::after {
+  transform: translate(0, 0);
+}
 
-.btn-secondary { --btn-bg: var(--black); }
+.btn-secondary {
+  --btn-bg: var(--black);
+}
 
-.btn-secondary:is(:hover, :focus) { --btn-bg: var(--pistachio); }
+.btn-secondary:is(:hover, :focus) {
+  --btn-bg: var(--pistachio);
+}
 
 .btn-outline {
   border: 2px solid var(--white);
@@ -308,11 +347,17 @@ body {
   color: var(--black);
 }
 
-.section { padding-block: var(--section-padding); }
+.section {
+  padding-block: var(--section-padding);
+}
 
-.w-100 { width: 100%; }
+.w-100 {
+  width: 100%;
+}
 
-.section-text { line-height: 2; }
+.section-text {
+  line-height: 2;
+}
 
 .img-cover {
   width: 100%;
@@ -330,7 +375,7 @@ body {
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.8) !important;
 }
 
-.privacy-page .header.active{
+.privacy-page .header.active {
   background-color: var(--eerie-black-1) !important;
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.8) !important;
 }
@@ -340,7 +385,7 @@ body {
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.8) !important;
 }
 
-.tos-page .header.active{
+.tos-page .header.active {
   background-color: var(--eerie-black-1) !important;
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.8) !important;
 }
@@ -352,7 +397,9 @@ body {
 \*-----------------------------------*/
 
 .lang-switch,
-.header-action { display: none; }
+.header-action {
+  display: none;
+}
 
 .header {
   position: fixed;
@@ -362,7 +409,8 @@ body {
   background-color: transparent;
   padding-block: 18px;
   z-index: 4;
-  background-color: hsla(0, 0%, 8%, 0.5); /* same color, 85% opacity */
+  background-color: hsla(0, 0%, 8%, 0.5);
+  /* same color, 85% opacity */
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.8);
 }
 
@@ -372,7 +420,9 @@ body {
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.8);
 }
 
-.header.active::after { display: none; }
+.header.active::after {
+  display: none;
+}
 
 .header .container {
   display: flex;
@@ -422,9 +472,11 @@ body {
   right: 15px;
 }
 
-.nav-close-btn ion-icon { --ionicon-stroke-width: 60px; }
+.nav-close-btn ion-icon {
+  --ionicon-stroke-width: 60px;
+}
 
-.navbar > .logo {
+.navbar>.logo {
   font-size: 4rem;
   width: max-content;
   margin-inline: auto;
@@ -459,7 +511,9 @@ body {
   transition: var(--transition-1);
 }
 
-.navbar-link:is(:hover, :focus) { background-color: var(--pistachio); }
+.navbar-link:is(:hover, :focus) {
+  background-color: var(--pistachio);
+}
 
 
 
@@ -488,7 +542,15 @@ body {
   font-size: var(--fs-2);
   margin-block: 30px;
   line-height: 1.2;
+  font-weight: 400;
 }
+
+.hero-title u {
+  text-decoration-color: #69bb1b;
+  text-decoration-thickness: 6px;
+  text-underline-offset: 10px;
+}
+
 
 .hero-text {
   font-family: var(--ff-inter);
@@ -526,11 +588,15 @@ body {
   color: var(--pistachio);
   font-size: 5.5rem;
   margin-block-start: 10px;
-} 
+}
 
-.features-item .item-icon ion-icon { --ionicon-stroke-width: 25px; }
+.features-item .item-icon ion-icon {
+  --ionicon-stroke-width: 25px;
+}
 
-.features-item .item-title { margin-block-end: 10px; }
+.features-item .item-title {
+  margin-block-end: 10px;
+}
 
 .features-item .item-text {
   max-width: 25ch;
@@ -546,7 +612,9 @@ body {
   #ABOUT
 \*-----------------------------------*/
 
-.about { padding-block-start: 120px; }
+.about {
+  padding-block-start: 120px;
+}
 
 .about-banner {
   position: relative;
@@ -582,7 +650,9 @@ body {
   margin-block-end: 30px;
 }
 
-.about .section-subtitle { margin-block-end: 10px; }
+.about .section-subtitle {
+  margin-block-end: 10px;
+}
 
 .tab-nav {
   display: flex;
@@ -604,7 +674,9 @@ body {
   color: var(--white);
 }
 
-.tab-list { margin-block: 25px 50px; }
+.tab-list {
+  margin-block: 25px 50px;
+}
 
 .tab-item {
   display: flex;
@@ -647,9 +719,13 @@ body {
   margin-block-end: 25px;
 }
 
-.cta .btn-outline { margin-inline: auto; }
+.cta .btn-outline {
+  margin-inline: auto;
+}
 
-.cta-banner { background-color: var(--light-gray); }
+.cta-banner {
+  background-color: var(--light-gray);
+}
 
 
 
@@ -667,7 +743,9 @@ body {
   padding-block-start: 200px;
 }
 
-.service .section-title { margin-block: 10px 40px; }
+.service .section-title {
+  margin-block: 10px 40px;
+}
 
 .service-list {
   display: grid;
@@ -684,7 +762,9 @@ body {
   transition: var(--transition-2);
 }
 
-.service-card:is(:hover, :focus-within) { outline-color: var(--pistachio); }
+.service-card:is(:hover, :focus-within) {
+  outline-color: var(--pistachio);
+}
 
 .service-card .card-icon {
   color: var(--pistachio);
@@ -693,14 +773,18 @@ body {
   margin-inline: auto;
 }
 
-.service-card .card-icon ion-icon { --ionicon-stroke-width: 20px; }
+.service-card .card-icon ion-icon {
+  --ionicon-stroke-width: 20px;
+}
 
 .service-card .card-title {
   letter-spacing: -1px;
   margin-block: 10px;
 }
 
-.service-card .card-text { font-family: var(--ff-inter); }
+.service-card .card-text {
+  font-family: var(--ff-inter);
+}
 
 .btn-link {
   display: flex;
@@ -713,7 +797,9 @@ body {
   margin-block-start: 15px;
 }
 
-.btn-link span { text-decoration: underline; }
+.btn-link span {
+  text-decoration: underline;
+}
 
 
 
@@ -728,9 +814,13 @@ body {
   gap: 60px;
 }
 
-.donate-card { box-shadow: var(--card-shadow); }
+.donate-card {
+  box-shadow: var(--card-shadow);
+}
 
-.donate-card .card-banner { background-color: var(--light-gray); }
+.donate-card .card-banner {
+  background-color: var(--light-gray);
+}
 
 .donate-card .card-content {
   background-color: var(--white);
@@ -754,7 +844,9 @@ body {
   font-weight: var(--fw-600);
 }
 
-.donate-card .card-title { --fs-5: 2.1rem; }
+.donate-card .card-title {
+  --fs-5: 2.1rem;
+}
 
 .progress-box {
   background-color: var(--cultured);
@@ -762,18 +854,18 @@ body {
   margin-block: 10px 20px;
 }
 
-.progress1 { 
-  height: 6px; 
-  width: 0; 
-  background-color: var(--pistachio); 
-  border-radius: inherit; 
+.progress1 {
+  height: 6px;
+  width: 0;
+  background-color: var(--pistachio);
+  border-radius: inherit;
 }
 
-.progress2 { 
-  height: 6px; 
-  width: 0%; 
-  background-color: var(--pistachio); 
-  border-radius: inherit; 
+.progress2 {
+  height: 6px;
+  width: 0%;
+  background-color: var(--pistachio);
+  border-radius: inherit;
 }
 
 .progress-value {
@@ -801,34 +893,52 @@ body {
   font-weight: var(--fw-500);
 }
 
-.card-wrapper-text data { font-weight: var(--fw-600); }
+.card-wrapper-text data {
+  font-weight: var(--fw-600);
+}
 
-.card-wrapper-text .green { color: var(--pistachio); }
+.card-wrapper-text .green {
+  color: var(--pistachio);
+}
 
-.card-wrapper-text .yellow { color: var(--bright-yellow-crayola); }
+.card-wrapper-text .yellow {
+  color: var(--bright-yellow-crayola);
+}
 
-.card-wrapper-text .cyan { color: var(--medium-turquoise); }
+.card-wrapper-text .cyan {
+  color: var(--medium-turquoise);
+}
 
 /*-----------------------------------*\
   #TESTIMONIALS
 \*-----------------------------------*/
 
-.testi { background-color: var(--jet); }
+.testi {
+  background-color: var(--jet);
+}
 
-.testi-content { padding: var(--section-padding) 15px; }
+.testi-content {
+  padding: var(--section-padding) 15px;
+}
 
 .testi .section-title {
   color: var(--white);
   margin-block: 10px 40px;
 }
 
-.testi-card { color: var(--white); }
+.testi-card {
+  color: var(--white);
+}
 
 .testi-text,
-.testi-name { font-size: var(--fs-8); }
+.testi-name {
+  font-size: var(--fs-8);
+}
 
 .testi-text,
-.testi-title { font-family: var(--ff-inter); }
+.testi-title {
+  font-family: var(--ff-inter);
+}
 
 .testi-text {
   padding-block-end: 30px;
@@ -841,7 +951,9 @@ body {
   font-size: var(--fs-10);
 }
 
-.testi-banner { background-color: var(--light-gray); }
+.testi-banner {
+  background-color: var(--light-gray);
+}
 
 
 
@@ -851,7 +963,9 @@ body {
   #PARTNER
 \*-----------------------------------*/
 
-.partner { background-color: var(--baby-powder); }
+.partner {
+  background-color: var(--baby-powder);
+}
 
 .partner .container {
   display: flex;
@@ -862,10 +976,14 @@ body {
 }
 
 .partner-logo .color,
-.partner-logo:is(:hover, :focus) .gray { display: none; }
+.partner-logo:is(:hover, :focus) .gray {
+  display: none;
+}
 
 .partner-logo:is(:hover, :focus) .color,
-.partner-logo .gray { display: block; }
+.partner-logo .gray {
+  display: block;
+}
 
 
 
@@ -875,9 +993,13 @@ body {
   #EVENT
 \*-----------------------------------*/
 
-.event { padding-block-end: 50px; }
+.event {
+  padding-block-end: 50px;
+}
 
-.event .section-subtitle { justify-content: center; }
+.event .section-subtitle {
+  justify-content: center;
+}
 
 .event .section-title {
   text-align: center;
@@ -898,7 +1020,9 @@ body {
   transition: var(--transition-2);
 }
 
-.event-card:is(:hover, :focus-within) { outline-color: var(--pistachio); }
+.event-card:is(:hover, :focus-within) {
+  outline-color: var(--pistachio);
+}
 
 .event-card .card-time {
   background-color: var(--pistachio);
@@ -911,9 +1035,13 @@ body {
   box-shadow: 0 10px 15px var(--pistachio_50);
 }
 
-.event-card .card-time .month { font-size: 2.1rem; }
+.event-card .card-time .month {
+  font-size: 2.1rem;
+}
 
-.event-card .card-time .date { font-size: var(--fs-4); }
+.event-card .card-time .date {
+  font-size: var(--fs-4);
+}
 
 .event-card .card-subtitle {
   margin-block: 30px 5px;
@@ -933,7 +1061,9 @@ body {
   margin-block: 5px 30px;
 }
 
-.event .btn-secondary { margin-inline: auto; }
+.event .btn-secondary {
+  margin-inline: auto;
+}
 
 
 
@@ -949,14 +1079,16 @@ body {
   overflow: hidden;
 }
 
-.insta-post-link > img { transition: var(--transition-2); }
+.insta-post-link>img {
+  transition: var(--transition-2);
+}
 
-.insta-post-link:is(:hover, :focus) > img {
+.insta-post-link:is(:hover, :focus)>img {
   transform: scale(1.1);
   opacity: 0.5;
 }
 
-.insta-post-link > ion-icon {
+.insta-post-link>ion-icon {
   color: var(--white);
   font-size: 5rem;
   position: absolute;
@@ -967,7 +1099,9 @@ body {
   transition: var(--transition-2);
 }
 
-.insta-post-link:is(:hover, :focus) > ion-icon { opacity: 1; }
+.insta-post-link:is(:hover, :focus)>ion-icon {
+  opacity: 1;
+}
 
 .insta-post-list {
   display: flex;
@@ -975,7 +1109,9 @@ body {
   scroll-snap-type: inline mandatory;
 }
 
-.insta-post-list::-webkit-scrollbar { display: none; }
+.insta-post-list::-webkit-scrollbar {
+  display: none;
+}
 
 .insta-post-item {
   min-width: 90%;
@@ -1023,15 +1159,21 @@ body {
   transition: var(--transition-1);
 }
 
-.footer-link {  color: var(--white_50); }
+.footer-link {
+  color: var(--white_50);
+}
 
-:is(.footer-link, .copyright-link):is(:hover, :focus) { 
+:is(.footer-link, .copyright-link):is(:hover, :focus) {
   background-color: hsla(0, 0%, 100%, 0.05);
 }
 
-.copyright { text-align: center; }
+.copyright {
+  text-align: center;
+}
 
-.copyright-link { display: inline-block; }
+.copyright-link {
+  display: inline-block;
+}
 
 
 
@@ -1067,7 +1209,9 @@ body {
    * CTA
    */
 
-  .cta { --fs-4: 4.1rem; }
+  .cta {
+    --fs-4: 4.1rem;
+  }
 
 }
 
@@ -1116,7 +1260,9 @@ body {
     box-shadow: var(--card-shadow);
   }
 
-  .donate-card .card-title { --fs-5: 2.4rem; }
+  .donate-card .card-title {
+    --fs-5: 2.4rem;
+  }
 
 
 
@@ -1130,7 +1276,9 @@ body {
     gap: 30px;
   }
 
-  .event-card .card-subtitle { margin-block-start: 0; }
+  .event-card .card-subtitle {
+    margin-block-start: 0;
+  }
 
   .event-card .card-title {
     font-size: var(--fs-5);
@@ -1143,7 +1291,9 @@ body {
    * INSTA POST
    */
 
-  .insta-post-item { min-width: 45%; }
+  .insta-post-item {
+    min-width: 45%;
+  }
 
 }
 
@@ -1162,7 +1312,9 @@ body {
    */
 
   .features-list,
-  .service-list { grid-template-columns: 1fr 1fr; }
+  .service-list {
+    grid-template-columns: 1fr 1fr;
+  }
 
 
 
@@ -1180,9 +1332,13 @@ body {
     left: calc(100% + 40px);
   }
 
-  .about-img { margin-block-end: 0; }
+  .about-img {
+    margin-block-end: 0;
+  }
 
-  .about-img:first-child { margin-block-end: 30px; }
+  .about-img:first-child {
+    margin-block-end: 30px;
+  }
 
 
 
@@ -1196,7 +1352,9 @@ body {
     gap: 30px;
   }
 
-  .testi-text { margin-block-start: 0; }
+  .testi-text {
+    margin-block-start: 0;
+  }
 
 
 
@@ -1204,7 +1362,9 @@ body {
    * INSTA POST
    */
 
-  .insta-post-item { min-width: 32%; }
+  .insta-post-item {
+    min-width: 32%;
+  }
 
 
 
@@ -1221,9 +1381,13 @@ body {
   }
 
   .footer-list,
-  .copyright { margin-inline: 0; }
+  .copyright {
+    margin-inline: 0;
+  }
 
-  .footer-list { margin-block-end: 0; }
+  .footer-list {
+    margin-block-end: 0;
+  }
 
 }
 
@@ -1257,7 +1421,9 @@ body {
    * HEADER
    */
 
-  .header { transition: var(--transition-2); }
+  .header {
+    transition: var(--transition-2);
+  }
 
   .header-action {
     display: flex;
@@ -1270,7 +1436,9 @@ body {
     font-size: 2.6rem;
   }
 
-  .search-btn ion-icon { --ionicon-stroke-width: 50px; }
+  .search-btn ion-icon {
+    --ionicon-stroke-width: 50px;
+  }
 
 
 
@@ -1292,9 +1460,13 @@ body {
    * FEATURES
    */
 
-  .features { padding-block-start: var(--section-padding); }
+  .features {
+    padding-block-start: var(--section-padding);
+  }
 
-  .features-list { grid-template-columns: repeat(4, 1fr); }
+  .features-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
 
 
@@ -1302,16 +1474,22 @@ body {
    * ABOUT
    */
 
-  .banner-col { width: 50%; }
+  .banner-col {
+    width: 50%;
+  }
 
-  .about-img { max-width: 100%; }
+  .about-img {
+    max-width: 100%;
+  }
 
   .about-img-2 {
     min-width: 120%;
     margin-inline-start: -20%;
   }
 
-  .about-img-3 { max-width: 90%; }
+  .about-img-3 {
+    max-width: 90%;
+  }
 
   .about .container {
     display: grid;
@@ -1320,7 +1498,9 @@ body {
     gap: 120px;
   }
 
-  .about-banner { margin-block-end: 0; }
+  .about-banner {
+    margin-block-end: 0;
+  }
 
 
 
@@ -1334,9 +1514,13 @@ body {
     gap: 30px;
   }
 
-  .cta-content { margin-block-end: 0; }
+  .cta-content {
+    margin-block-end: 0;
+  }
 
-  .cta .section-title { --fs-4: 5rem; }
+  .cta .section-title {
+    --fs-4: 5rem;
+  }
 
 
 
@@ -1344,7 +1528,9 @@ body {
    * SERVICE
    */
 
-  .service-list { grid-template-columns: repeat(4, 1fr); }
+  .service-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
 
 
@@ -1368,7 +1554,9 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 
-  .testi-content { padding-inline: 30px 50px; }
+  .testi-content {
+    padding-inline: 30px 50px;
+  }
 
 
 
@@ -1383,7 +1571,9 @@ body {
     align-items: center;
   }
 
-  .event-card .card-text { margin-block-end: 0; }
+  .event-card .card-text {
+    margin-block-end: 0;
+  }
 
 
 
@@ -1391,7 +1581,9 @@ body {
    * INSTA POST
    */
 
-  .insta-post-item { min-width: 24%; }
+  .insta-post-item {
+    min-width: 24%;
+  }
 
 }
 
@@ -1432,7 +1624,9 @@ body {
     padding-inline: 30px;
   }
 
-  .section-title { line-height: 1.2; }
+  .section-title {
+    line-height: 1.2;
+  }
 
 
 
@@ -1442,10 +1636,14 @@ body {
 
   .nav-open-btn,
   .nav-close-btn,
-  .navbar > .logo,
-  .navbar-link > ion-icon { display: none; }
+  .navbar>.logo,
+  .navbar-link>ion-icon {
+    display: none;
+  }
 
-  .header { padding-block: 25px; }
+  .header {
+    padding-block: 25px;
+  }
 
   .navbar {
     all: unset;
@@ -1465,9 +1663,13 @@ body {
     transition: var(--transition-2);
   }
 
-  .navbar-link:is(:hover, :focus) { background: none; }
+  .navbar-link:is(:hover, :focus) {
+    background: none;
+  }
 
-  .navbar-list:hover .navbar-link:not(:hover) { color: var(--white-60); }
+  .navbar-list:hover .navbar-link:not(:hover) {
+    color: var(--white-60);
+  }
 
 
 
@@ -1498,7 +1700,9 @@ body {
    * ABOUT
    */
 
-  .deco-img { left: -35px; }
+  .deco-img {
+    left: -35px;
+  }
 
 
 
@@ -1506,9 +1710,13 @@ body {
    * DONATE
    */
 
-  .donate-card { padding-inline-end: 120px; }
+  .donate-card {
+    padding-inline-end: 120px;
+  }
 
-  .donate-card .card-content { width: 65%; }
+  .donate-card .card-content {
+    width: 65%;
+  }
 
 
 
@@ -1516,7 +1724,9 @@ body {
    * PARTNER
    */
 
-  .partner .container { justify-content: space-evenly; }
+  .partner .container {
+    justify-content: space-evenly;
+  }
 
 
 
@@ -1524,7 +1734,9 @@ body {
    * INSTA POST
    */
 
-  .insta-post-item { min-width: 20%; }
+  .insta-post-item {
+    min-width: 20%;
+  }
 
 
 
