--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,157 @@
   #CUSTOM PROPERTY
 \*-----------------------------------*/
 
+/* Mobile Only */
+@media (max-width: 768px) {
+
+.mobile-donation-footer3 {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 10px;
+  background-color: #222;
+  opacity: 100%;
+  z-index: 10000;
+  gap: 10px;
+
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 0.4s ease-out, opacity 0.4s ease-out;
+}
+
+/* When visible */
+  .mobile-donation-footer3.visible {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.progress-container3 {
+  flex: 1;
+  margin-right: 8px;
+}
+
+.progress-bar3 {
+  position: relative;
+  width: 100%;
+  height: 28px;
+  background-color: #444;
+  border-radius: 14px;
+  overflow: hidden;
+}
+
+.progress-fill3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0%; /* Start empty */
+  background-color: #8dc642;
+  transition: width 2s cubic-bezier(0.25, 0.8, 0.25, 1); /* ease out */
+  border-radius: 14px 0 0 14px;
+}
+
+.progress-text3 {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 14px;
+  line-height: 28px;
+  pointer-events: none;
+  font-weight: bold;
+}
+
+.donate-button {
+  position: relative;
+  background-color: var(--btn-bg, var(--pistachio));
+  color: var(--white);
+  font-weight: var(--fw-600);
+  font-size: 10px;
+  padding: 5px 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition: var(--transition-2);
+
+  opacity: 0;
+  transform: scale(0.5);
+}
+
+.donate-button:not(.btn-outline)::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border: 1px solid var(--btn-bg, var(--pistachio));
+  transform: translate(2.5px, 2.5px);
+  transition: var(--transition-2);
+}
+
+.donate-button:is(:hover, :focus)::after {
+  transform: translate(0, 0);
+}
+
+.pop-in {
+  animation: popIn 0.6s forwards; /* 0.6s duration */
+}
+
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  70% {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+}
+
+
+
+
+
+
+@media (max-width: 768px) {
+  .donate-slideup {
+    opacity: 0;
+    transform: translateY(16px);
+    animation: donateSlideUp 0.6s ease-out .01s forwards;
+    will-change: transform, opacity;
+  }
+
+  @keyframes donateSlideUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
+
+
+
+
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
 
 .features-list>.donate-card {
   grid-column: 1 / -1;
@@ -1991,3 +2142,9 @@ body {
 
 
 
+@media (max-width: 768px) {
+  .about-banner img {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+}
